--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lightweight-charts": "^1.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-grid-layout": "^0.17.1",
     "react-scripts": "3.3.0",
     "rxjs": "^6.5.4"
   },
