--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -12,7 +13,8 @@
     "react-dom": "^16.12.0",
     "react-grid-layout": "^0.17.1",
     "react-scripts": "3.3.0",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
