--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-grid-layout": "^0.17.1",
     "react-scripts": "3.3.0",
     "rxjs": "^6.5.4",
+    "socket.io-client": "^2.3.0",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
